@@ -6,7 +6,9 @@ version 0.9.13 (03/27/2000):
 	* GNOME compile error fixed
 	* Away Message Problem Fixed
 	* Fixed URL Right Click Menus
-
+	* Conversation Loggin now shows Full Date and Time
+	* Internal Change to Buddy List
+ 
 version 0.9.12 (03/25/2000):
 	* Segfault fix for PPC/Alpha/etc machines with log(0)
 	  Thanks to Todd Cohen for this one.
